# genai-workshops

./: .gitignore  main.py  pyproject.toml
labs/: ai-rag-lab.ipynb
