[project]
name = "genai-devday-notebooks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain==0.3.27",
    "langchain-aws==0.2.35",
    "langchain-google-genai==2.1.4",
    "langchain-openai==0.3.16",
    "langgraph==0.4.2",
    "langgraph-checkpoint-mongodb==0.1.3",
    "pillow==11.1.0",
    "tiktoken==0.9.0",
    "tqdm==4.67.1",
    "voyageai==0.3.4",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
